# cppbackend

./: git_push.sh
sprint1/problems/cafeteria/build-solution-avr_baremetal_generic_elf_16bit-Debug/: CMakeCache.txt.prev
sprint1/problems/final_task/solution/: CMakeLists.txt  Dockerfile
sprint1/problems/map_json/solution/src/: model.h  (+4 more)
sprint1/problems/restaurant_single_threaded/build-solution-directory-Debug/: CMakeCache.txt.prev  qtcsettings.cmake
sprint1/problems/sync_server/build-solution-directory-Debug/: CMakeCache.txt.prev
sprint2/examples/boost_log/: main.cpp
sprint2/examples/boost_log/build_debug/: CMakeCache.txt.prev  main.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile  build-debug.sh
sprint2/problems/command_line/solution/build-debug/: CMakeCache.txt.prev  conanbuildinfo.txt  conanbuildinfo_debug.cmake
sprint2/problems/command_line/solution/build-debug/.cmake/api/v1/reply/: cmakeFiles-v1-5ae958073e34fbe0662b.json  codemodel-v2-f731f47f84cc66990e18.json  index-2023-10-21T23-52-47-0365.json  target-game_server-Debug-b6b0f321ab7192691625.json
sprint2/problems/command_line/solution/build-debug/.cmake/api/v1/reply.prev/: cache-v2-3f74907100882597d987.json  codemodel-v2-da5b8ce50c86e04e4c0d.json  index-2023-10-21T23-26-03-0585.json  target-game_server-Debug-a59d29107a23dea06cc6.json
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  api_handler.tpp  game_manager.cpp  game_manager.h  game_manager.tpp  http_server.h  http_strs.h  json_keys.h  logging_request_handler.h  model_serialization.cpp  model_serialization.h  move_manager.cpp  move_manager.h  my_debug.h  request_handler.h  request_handler.tpp  resp_maker.h  resp_maker.tpp  ticker.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/: Dockerfile  build-release.sh
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/build-solution-avr_baremetal_generic_elf_16bit-Debug/: CMakeCache.txt.prev
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: game_manager.h  http_server.cpp  loot_generator.cpp  main.cpp  model.h  model_serialization.cpp  move_manager.cpp  move_manager.h
sprint3/problems/gen_objects/solution/tests/: model_tests.cpp
sprint3/problems/scores/solution/: Dockerfile
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/db_of_books/solution/: CMakeLists.txt  build.sh  conanfile.txt
(+196 files in other folders)
